fix alignment, fixes #8851
git-svn-id: svn://develop.studip.de/studip/trunk@58426 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/less/mvv.less
+++ b/resources/assets/stylesheets/less/mvv.less
@@ -497,7 +497,14 @@ select.mvv-search-select-list {
     display: none;
     cursor: pointer;
 }
-
+table.default {
+    thead tr th,
+    tbody tr td {
+        &.mvv-search-modules-row {
+            padding-left: 25px;
+        }
+    }
+}
 .sortable  a {
     cursor: pointer;
 }
